--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: #222;
-    background-image: url("https://source.unsplash.com/1920x1080/?landscape")
+    background-image: url("https://source.unsplash.com/1920x1080/?Austin")
+}
+
+@media (max-width: 500px) {
+    body {
+        background-size: 700px 900px;
+    }
 }
 
 .card {
